<resources>
    <string name="app_name">Randomiser</string>
    <string name="app_description">A Fun Experiment with Friends in order to reduce bias and choose the best one out</string>
    <string name="no_camera_title">No Camera Detected</string>
    <string name="no_camera_description">Your device has no camera, to use this app you would require a camera on your android device.</string>
    <string name="start_detection">Start Detection</string>
    <string name="background_image">Background Image</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="camera_permission_second_request">Please provide the camera permission to play. Would you like to provide now?</string>
    <string name="camera_permission_fail">You would not be able to play until you provide the permission.</string>
    <string name="results">Results</string>
    <string name="results_error">There was an error processing your results, try again</string>
    <string name="try_again">Try again</string>
    <string name="tap_me">Tap me</string>
    <string name="original">Original</string>
    <string name="processed">Processed</string>
</resources>