<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_original"
        android:layout_width="@dimen/dm_0"
        android:layout_height="@dimen/dm_0"
        android:contentDescription="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_original"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_16"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/original"
        android:textSize="@dimen/sp_28"
        android:visibility="gone"
        android:textColor="@color/font_color"
        app:layout_constraintEnd_toEndOf="@id/guide_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_processed"
        android:layout_width="@dimen/dm_0"
        android:layout_height="@dimen/dm_0"
        android:contentDescription="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_50"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_processed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_16"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/processed"
        android:textSize="@dimen/sp_28"
        android:visibility="gone"
        android:textColor="@color/font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_50"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="@dimen/dm_0"
        android:layout_height="@dimen/dm_0"
        android:contentDescription="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_results_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_16"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/results_error"
        android:textColor="@color/font_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_try_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm_16"
        android:background="@drawable/gradient_rounded_button"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>